--- a/requirements.txt
+++ b/requirements.txt
@@ -13,12 +13,15 @@ cron-descriptor==1.4.5
 Django==4.2
 django-celery-beat==2.7.0
 django-celery-results==2.5.1
+django-extensions==3.2.3
 django-timezone-field==7.0
 ffmpeg-python==0.2.0
 future==1.0.0
 kombu==5.4.1
+mock==5.1.0
 msgpack==1.1.0
 prompt_toolkit==3.0.47
+psycopg2==2.9.9
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 python-decouple==3.8
