--- a/settings.ini
+++ b/settings.ini
@@ -4,19 +4,17 @@
 SECRET_KEY = django-insecure-ojm5s(l^*1i5@w!90++_lqrgr(^m&wmihukpv7835&cqp4kzq1))
 DEBUG = True
 ALLOWED_HOSTS = 127.0.0.1, localhost
-DB_ENGINE = django.db.backends.sqlite3
-DB_NAME = db.sqlite3.db
-DB_USER =
-DB_PASSWORD =
-DB_HOST =
-DB_PORT =
-
+DB_ENGINE = django.db.backends.postgresql
+DB_NAME = mydb
+DB_USER = user
+DB_PASSWORD = supersecret
+DB_HOST = db
+DB_PORT = 5432
 # Celery Configurations
 
-CELERY_BROKER_URL = redis://127.0.0.1:6379
+CELERY_BROKER_URL = redis://redis:6379/1
 CELERY_ACCEPT_CONTENT = application/json
 CELERY_RESULT_SERIALIZER = json
 CELERY_TASK_SERIALIZER = json
 CELERY_TIMEZONE = Asia/Kolkata
 CELERY_RESULT_BACKEND = django-db
-CELERY_BEAT_SCHEDULER = django_celery_beat.schedulers:DatabaseScheduler
