--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ migrations
 # DB Configuration file
 db.sqlite3
 db.sqlite3.*
-
+*.sqlite3.*
 # Mac  files
 .DS_Store
 */.DS_Store
@@ -36,7 +36,7 @@ db.sqlite3.*
 /*/*/*.rdb
 
 
-# Assests
+# Assets
 
 assets/
 */assets/
